--- a/data/style.css
+++ b/data/style.css
@@ -189,6 +189,9 @@ aside{
   h3{
       font-size: 4vw;
   }
+  h4{
+    font-size: 4vw;
+  }
   .Line-Item{
     text-align: center;
     display: block;
